fix styles on navbar, contact, header and dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 }
 
 .sun {
-  right: 100%;
+  right: 110%;
   position: absolute;
   bottom: 25%;
 }
@@ -30,15 +30,15 @@
 .moon {
   bottom: 25%;
   position: absolute;
-  left: 8%;
+  left: 45%;
 }
 
 .dark-theme-form {
-  width: 45%;
+  width: 7%;
   position: relative;
   font-size: 1.5rem;
-  left: 50%;
-  top: 20px;
+  left: 90vw;
+  top: 2vh;
 }
 
 .custom-control {
@@ -50,9 +50,15 @@
 
 @media (max-width: 524px) {
   .moon {
-    left: 21%;
+    left: 131%;
   }
   .sun {
-    right: 102%;
+    right: 120%;
   }
+
+  .dark-theme-form {
+    left: 80vw;
+    top: 2vh;
+  }
+
 }
