--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,7 +6,7 @@
 }
 
 .navbar-nav {
-  margin-right: 25px;
+  margin-right: 20px;
 }
 
 .logo {
